--- a/M8L3 praktikum/index.html
+++ b/M8L3 praktikum/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <!-- slick slider -->
@@ -19,7 +20,66 @@
     <title>Carousel praktikum</title>
   </head>
   <body>
-    <!-- carousel container -->
+    <!--header & navbar -->
+    <header class="header">
+      <div class="burger-menu">
+        <span></span>
+      </div>
+      <nav class="main-nav">
+        <ul class="nav-list">
+          <li class="list__item"><a href="">Akun Saya</a></li>
+          <li class="list__item"><a href="">Keranjang </a></li>
+          <li class="list__item"><a href="">Pesanan</a></li>
+          <li class="list__item"><a href="">Hubungi Kami</a></li>
+          <li class="list__item"><a href="">Tentang kami</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <!--Tulisan atas-->
+    <h1>Populer</h1>
+    <!-- carousel container populer -->
+    <div class="carousel">
+      <!-- carousel items -->
+      <div class="carousel__item">
+        <img src="https://via.placeholder.com/300" alt="" class="image" />
+        <p class="title">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde,
+          laboriosam!
+        </p>
+      </div>
+      <div class="carousel__item">
+        <img src="https://via.placeholder.com/300" alt="" class="image" />
+        <p class="title">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam,
+          optio.
+        </p>
+      </div>
+      <div class="carousel__item">
+        <img src="https://via.placeholder.com/300" alt="" class="image" />
+        <p class="title">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam,
+          optio.
+        </p>
+      </div>
+      <div class="carousel__item">
+        <img src="https://via.placeholder.com/300" alt="" class="image" />
+        <p class="title">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam,
+          optio.
+        </p>
+      </div>
+      <div class="carousel__item">
+        <img src="https://via.placeholder.com/300" alt="" class="image" />
+        <p class="title">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam,
+          optio.
+        </p>
+      </div>
+    </div>
+
+    <!--carousel container untuk anda-->
+    <h1>Anda Mungkin Suka</h1>
     <div class="carousel">
       <!-- carousel items -->
       <div class="carousel__item">
